fixed alignement of about-text on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -244,7 +244,7 @@ img {
     margin-right: 5vw;
     font-size: 23pt;
     line-height: 40px;
-    text-align: right;
+    text-align: left;
   }
 
   #hello-there {
@@ -311,17 +311,6 @@ img {
   }
 
 }
-
-
-
-
-
-
-
-
-
-
-
 
 
 
